AM_CPPFLAGS = \
	-I ${top_srcdir}/libop \
	-I ${top_srcdir}/libutil \
	-I ${top_srcdir}/libdb \
	-I ${top_srcdir}/libopt++ \
	-I ${top_srcdir}/libutil++ \
	-I ${top_srcdir}/libop++ \
	-I ${top_srcdir}/libregex

AM_CXXFLAGS = @OP_CXXFLAGS@

noinst_LIBRARIES = libpp.a
libpp_a_SOURCES = \
	arrange_profiles.cpp \
	arrange_profiles.h \
	count_array.cpp \
	count_array.h \
	filename_spec.cpp \
	filename_spec.h \
	format_flags.h \
	format_output.cpp \
	format_output.h \
	locate_images.cpp \
	locate_images.h \
	name_storage.cpp \
	name_storage.h \
	op_header.cpp \
	op_header.h \
	symbol.h \
	partition_files.h \
	partition_files.cpp \
	profile.cpp \
	profile.h \
	profile_container.cpp \
	profile_container.h \
	profile_spec.cpp \
	profile_spec.h \
	sample_container.cpp \
	sample_container.h \
	split_sample_filename.cpp \
	split_sample_filename.h \
	symbol_container.cpp \
	symbol_container.h \
	symbol_functors.cpp \
	symbol_functors.h \
	symbol_sort.cpp \
	symbol_sort.h
