AM_CPPFLAGS=-I../libutil

noinst_LIBRARIES = libutil++.a
libutil___a_SOURCES = op_bfd.cpp child_reader.cpp file_manip.cpp string_manip.cpp filename_match.cpp demangle_symbol.cpp cverb.cpp

EXTRA_DIST = child_reader.h demangle_symbol.h filename_match.h string_manip.h cverb.h file_manip.h op_bfd.h utility.h
